<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parking Finder</string>
    <string name="searchPark">Need parking</string>
    <string name="releasePark">Release parking</string>
    <string name="networkProblem">Network problem</string>
    <string name="connectionRequired">This application requires network access. Please, enable mobile network or Wi-Fi.</string>
    <string name="gpsProblem">Localization problem</string>
    <string name="gpsDisabled">GPS is disabled in your device. For a better experience we suggest to enable it.</string>
    <string name="parkHere">Park here</string>
    <string name="addParkInformation">Would you insert information about the parking you are freeing?</string>
    <string name="parkingInfo">Parking Info</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="freesince">Free since:</string>    
    <string name="parkingType">Type:</string>
    <string name="undefinedParking">Undefined</string>
    <string name="freeParking">Free</string>
    <string name="tollParking">Toll</string>
    <string name="residentsParking">For residents</string>
    <string name="disabledParking">For disabled</string>
    <string name="timedParking">Timed</string>

    <string-array name="parkingTypes">
        <item>@string/undefinedParking</item>
        <item>@string/freeParking</item>
        <item>@string/tollParking</item>
        <item>@string/residentsParking</item>
        <item>@string/disabledParking</item>
        <item>@string/timedParking</item>
    </string-array>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="freeingParking">Freeing a Parking</string>
    <string name="comments">Comments:</string>
    <string name="confirmReleaseParking">Are you freeing this parking?</string>
    <string name="address">Address:</string>
    <string name="occupyingParking">Occupying a Parking</string>
    <string name="confirmOccupyParking">Are you occupying a parking?</string>
    <string name="centerMenu">Center Map</string>
    <string name="optionsMenu">Options</string>
    <string name="homeMenu">Home</string>
    <string name="actionDisallowed">Action not allowed</string>
    <string name="releaseParkingFirst">To search for a new parking, you have to release your current parking first.</string>
    <string name="filter">Filter</string>
    <string name="rangeSearch">Distance of search (meters): </string>
    <string name="timeRefresh">Refresh time (minutes): </string>
    <string name="notifySound">Notification sound</string>
    <string name="filterSearch">Type of parking</string>
    <string name="chooseParkingType">Choose parking types:</string>
    <string name="parkingReleased">Parking released</string>
    <string name="thanks">Thanks for your contribution!</string>
    <string name="ok">OK</string>
    <string name="occupy">Occupy this</string>
    <string name="parkingOccupied">Parking occupied</string>
    <string name="parkedHere">Congratulations, you\'ve found a parking!\nWhen you want to go back to your car, select Release Parking from the main menu.</string>
    <string name="load">Loading. Please Wait</string>
    <string name="loadPosition">Acquiring the position&#8230;</string>
    <string name="connectProblem">Problem connecting to the server</string>
    <string name="refreshMenu">Refresh</string>
    <string name="newParking">New Parking</string>
    <string name="foursquare">Check-in on Foursquare</string>
    <string name="checkedin">Check-in done</string>
    <string name="login">Login</string>
    <string name="deleteFourSquare">Disconnect Foursquare</string>
    <string name="helpText">This help message will appear only this time, but you can open it again in the Menu, and it is useful to understand what means the markers on the map.\n\nThese are the colours to identify different types of parking:</string>
    <string name="helpText2">Based on the alpha of the marker, you can fastly check the newly freed parkings:</string>
    <string name="zeroMinsParking">Parking freed &lt; 5 minutes</string>
    <string name="fiveMinsParking">Parking freed &lt; 10 minutes</string>
    <string name="tenMinsParking">Parking freed &gt; 10 minutes</string>
    <string name="welcome">Welcome to ParkingFinder!</string>
    <string name="helpMenu">Help</string>
    <string name="days">" days"</string>
    <string name="hours">" hours"</string>
    <string name="minutes">" minutes"</string>
    <string name="seconds">" seconds"</string>
    <string name="and">" and "</string>
    
</resources>
