<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/latitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:text="@string/latitude"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/longitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/latitudeLabel"
            android:layout_marginLeft="10dp"
            android:text="@string/longitude"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/addressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/longitudeLabel"
            android:layout_marginLeft="10dp"
            android:text="@string/address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/parkingTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/addressLabel"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/parkingType"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/commentsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/parkingTypeLabel"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/comments"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/parkingTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/parkingTypeLabel"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:entries="@array/parkingTypes" />

        <EditText
            android:id="@+id/commentsText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/commentsLabel"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/parkingTypeSpinner"
            android:layout_marginRight="10dp"
            android:inputType="textMultiLine"
            android:maxLength="140" >
        </EditText>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/commentsText"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="90dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/saveButton"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/commentsText"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="90dp"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/latitudeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/longitudeLabel"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/longitudeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/latitudeValue"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/addressValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/longitudeValue"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</ScrollView>